--- a/portfolio web/lees.css
+++ b/portfolio web/lees.css
@@ -439,7 +439,7 @@ body {
 
 #footer h2 {
   text-align: center;
-  font-size: 1.8rem;
+  font-size: 1rem;
   padding: 2.6rem;
   font-weight: 500;
   color: #fff;
@@ -448,7 +448,7 @@ body {
 
 /* ......../ media query /.......... */
 
-@media (max-width: 768px) {
+@media (max-width: 769px) and (max-width: 1200px) {
   .navbar {
     opacity: 0.95;
   }
