--- a/portfolio web/lees.css
+++ b/portfolio web/lees.css
@@ -3,13 +3,14 @@
 *,
 *::after,
 *::before {
-  box-sizing: border-box;
-  padding: 0;
-  margin: 0;
-}
-
-.html {
-  font-size: 62.5%;
+  margin:0px;
+  padding:0px;
+  -webkit-box-sizing:border-box;
+  -moz-box-sizing:border-box;
+  box-sizing:border-box;
+  margin:0;
+  padding:0;
+  outline:0 
 }
 
 body {
@@ -18,10 +19,255 @@ body {
 
 /* ///////////..utility classes../////////// */
 
+/********** Common CSS Starts **********/
+html {
+  -webkit-text-size-adjust: 100%;
+  -ms-text-size-adjust: 100%;
+  font-size: 12px;
+  -webkit-tap-highlight-color: transparent
+}
+
 .container {
-  max-width: 1200px;
-  width: 90%;
-  margin: auto;
+  width: 1150px;
+  margin: 0px auto;
+  display: table;
+}
+
+.width-100 {
+  width: 100%;
+  float: left;
+}
+
+.width-50 {
+  width: 50%;
+  float: left;
+}
+
+.width-25 {
+  width: 25%;
+  float: left;
+}
+
+.width-75 {
+  width: 75%;
+  float: left;
+}
+
+.width-80 {
+  width: 80%;
+  float: left;
+}
+
+.width-60 {
+  width: 60%;
+  float: left;
+}
+
+.width-40 {
+  width: 40%;
+  float: left;
+}
+
+.width-33 {
+  width: 33%;
+  float: left;
+}
+
+.width-30 {
+  width: 30%;
+  float: left;
+}
+
+.width-20 {
+  width: 20%;
+  float: left;
+}
+
+.main-section {
+  width: 100%;
+  float: left;
+  padding-top: 80px;
+  padding-bottom: 80px;
+}
+
+.bg-grey {
+  background: #ffffff;
+}
+
+.heading-section {
+  font-size: 25px;
+  text-align: center;
+}
+
+.heading-section span {
+  color: #787eff;
+}
+
+.subhead-section {
+  font-size: 16px;
+  text-align: center;
+  margin-bottom: 40px;
+}
+
+/********** Common CSS Ends **********/
+
+
+/**********  Feature-Section CSS Code Starts  **********/
+
+.featured-content i {
+	font-size: 37px;
+	padding: 7px 0 0 10px;
+	color: #eb372a;
+}
+.featured-content h4 {
+	color: #666;
+	font-size: 14px;
+	margin: 0 0 5px;
+	text-transform: uppercase;
+	font-weight:500;
+	font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+}
+.featured-content p {
+	font-size: 13px;
+	color:#333333;
+	font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+}
+.margin-top-8 {
+	margin-top:8px;
+}
+.featured-border {
+	border: 1px solid #ebebeb;
+	width:100%;
+	float:left;
+	padding:15px 0px;
+}
+
+/**********   Feature-Section CSS Code Ends  **********/
+
+/* the footer*/
+/**********  Footer-Section CSS Code Starts  **********/
+.footer {
+  background: #232f3e;
+  padding: 50px 0px;
+}
+
+.quicklink-menu {
+  list-style: none;
+  padding-left: 10px;
+}
+
+.quicklink-menu li a {
+  color: #fff;
+  line-height: 2.5;
+  font-size: 15px;
+  text-decoration: none;
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+}
+
+.social-media {
+  list-style: none;
+  margin-top: 10px;
+}
+
+.social-media li a img {
+  width: 30px;
+}
+
+.social-media li {
+  float: left;
+  padding: 0px 8px;
+}
+
+.quicklink-heading {
+  font-size: 18px;
+  font-weight: bold;
+  color: #fff;
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  margin-bottom: 10px;
+}
+
+.get-in-touch {
+  list-style: none;
+  padding-left: 10px;
+}
+
+.get-in-touch li i {
+  color: #ed372c;
+  font-size: 20px;
+}
+
+.get-in-touch li {
+  color: #fff;
+  line-height: 2.5;
+  font-size: 15px;
+  text-decoration: none;
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+}
+
+.footer-e-mail {
+  font-size: 15px;
+  font-weight: bold;
+  color: #fff;
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  text-decoration: none;
+}
+
+.footer-website {
+  font-size: 12px;
+  font-weight: bold;
+  color: #fff;
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  text-decoration: none;
+}
+
+.footer2-bacbor {
+  background: #232f3e;
+  padding: 10px 0px;
+  border-top: 1px solid #898989;
+}
+
+.footer2-content {
+  font-size: 14px;
+  color: #fff;
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  text-align: center;
+}
+
+/**********  Footer-bottom Section CSS Code Starts  **********/
+.footer2-bacbor {
+  background: #232f3e;
+  padding: 10px 0px;
+  border-top: 1px solid #898989;
+}
+
+.footer2-content {
+  font-size: 14px;
+  color: #fff;
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  text-align: center;
+}
+
+/**********   Footer-bottom Section CSS Code Ends  **********/
+
+/**********   Footer-Section CSS Code Ends  **********/
+
+@media (min-width: 768px) {
+  footer .footer-container {
+    display: flex;
+    justify-content: space-between;
+  }
+
+  footer .footer-container .footer-col {
+    flex-basis: 32%;
+  }
+}
+
+footer .bottombar {
+  padding: 20px 15px;
+  background-color: #070e14;
+  text-align: center;
+  font-style: italic;
+  color: #FFFFFF;
 }
 
 .btn {
@@ -38,14 +284,13 @@ body {
 
 .btn-primary {
   color: #fff;
-  background: #16a083;
+  background: palevioletred;
 }
 
 .btn-primary:hover {
   background: #117964;
-  transition: background 0.3s ease-in-out;
+  transition: 0.3s ease-in-out;
 }
-
 /* ............/navbar/............ *
 
 /* desktop mode............/// */
@@ -73,45 +318,35 @@ body {
   align-items: center;
 }
 
-.menu-items {
+.nav-items {
   order: 2;
   display: flex;
 }
 
-.menu-items li {
+.nav-items li {
   list-style: none;
   margin-left: 1.5rem;
   margin-bottom: 0.5rem;
-  font-size: 1.2rem;
+  font-size: 1rem;
 }
 
-.menu-items a {
+.nav-items a {
   text-decoration: none;
-  color: #444;
+  color: black;
   font-weight: 500;
   transition: color 0.3s ease-in-out;
 }
 
-.menu-items a:hover {
-  color: #117964;
+.nav-items a:hover {
+  color: palevioletred;
   transition: color 0.3s ease-in-out;
-}
-
-.logo {
-  order: 1;
-  font-size: 2.3rem;
-  margin-bottom: 0.5rem;
 }
 
 /* ............//// Showcase styling ////......... */
 
 .showcase-area {
   height: 50vh;
-  background: linear-gradient(
-      rgba(240, 240, 240, 0.144),
-      rgba(255, 255, 255, 0.336)
-    ),
-    url("./img/header-image2.jpg");
+  background: url("https://images.unsplash.com/photo-1512950050685-b1d4ae63d2df?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8NXx8cG9ydGZvbGlvJTIwYmFja2dyb3VuZHxlbnwwfHwwfHx8MA%3D%3D&w=1000&q=80");
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
@@ -128,8 +363,41 @@ body {
 
 .main-title {
   text-transform: uppercase;
+  font-style: italic;
+  font-family: cursive;
   margin-top: 1.5em;
 }
+
+.showcase-area p {
+  color: rgb(29, 28, 28);
+  font-style: italic;
+  font-size: 16px;
+}
+
+/* .cart-sect {
+  list-style: none;
+  float: right;
+  margin-top: 8px;
+  margin-bottom: 1rem;
+}
+
+.cart-sect li {
+  float: left;
+  padding: 0px 6px;
+
+}
+
+.cart-sect li a {
+  font-size: 14px;
+  color: black;
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  text-decoration: none;
+}
+
+.cart-sect li i {
+  font-size: 14px;
+  color: black;
+} */
 
 /* ......//about us//...... */
 
@@ -163,6 +431,7 @@ body {
   padding: 30px;
   transform: translateX(150%);
   animation: about-img-animation 1s ease-in-out forwards;
+
 }
 
 @keyframes about-img-animation {
@@ -193,13 +462,13 @@ body {
   object-position: centre;
 }
 
-/* ..........////Food category///........... */
+/* ..........////product category///........... */
 
-#food {
+#collection {
   padding: 5rem 0 10rem 0;
 }
 
-#food h2 {
+#collection h2 {
   text-align: center;
   font-size: 2.5rem;
   font-weight: 400;
@@ -208,12 +477,12 @@ body {
   color: #555;
 }
 
-.food-container {
+.collection-container {
   display: flex;
   justify-content: space-between;
 }
 
-.food-container img {
+.collection-container img {
   display: block;
   width: 100%;
   margin: auto;
@@ -240,7 +509,7 @@ body {
 
 .img-content h3 {
   color: #fff;
-  font-size: 2.2rem;
+  font-size: 1.2rem;
 }
 
 .img-content a {
@@ -274,57 +543,91 @@ body {
   top: 40%;
 }
 
-/* .........../Food Menu/............ */
 
-.food-menu-heading {
+/**********  Product-Section CSS Code Starts  **********/
+.product-section {
+  padding-left: 15px;
+  padding-right: 15px;
+  margin-bottom: 20px;
+}
+
+.product-img {
+  width: auto;
+  height: 270px;
+}
+
+.product-img-center {
   text-align: center;
-  font-size: 3.4rem;
+}
+
+.product-border {
+  border: 1px solid #d1d1d1;
+  padding: 20px;
+}
+
+.product-name a {
+  color: #232b33;
+  text-decoration: none;
+  font-size: 17px;
+  font-family: Roboto, sans-serif, arial;
+}
+
+.product-rating {
+  color: #FFC315;
+  font-size: 14px;
+  padding-top: 6px;
+}
+
+.product-rating span {
+  font-weight: 600;
+  color: #3c3b3b8c;
+  font-size: 12px;
+  font-family: Roboto, sans-serif, arial;
+}
+
+.product-discounted-price {
+  color: #333;
+  font-size: 18px;
+  letter-spacing: 0.1px;
+  font-weight: 600;
+  font-family: Roboto, sans-serif, arial;
+}
+
+.product-original-price {
+  color: #6f6f6f;
+  text-decoration: line-through;
+  font-size: 14px;
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+}
+
+.product-discount {
+  border: 1px solid #ccc;
+  background: #fff;
+  display: inline-block;
+  font-size: 10px;
+  color: #999;
+  padding: 5px;
+  border-radius: 1px;
+  float: right;
+}
+
+.product-price {
+  margin-top: 15px;
+
+
+}
+
+#products h2 {
+  text-align: center;
+  font-size: 2.5rem;
   font-weight: 400;
-  color: #666;
-}
-
-.food-menu-container {
-  display: flex;
-  flex-wrap: wrap;
-  padding: 50px 0px 30px 0px;
-}
-
-.food-menu-container img {
-  display: block;
-  width: 250px;
-  height: 250px;
-  border-radius: 50%;
-  object-fit: cover;
-  object-position: center;
-}
-
-.food-menu-item {
-  display: flex;
-  flex: 1 1 600px;
-  justify-content: space-evenly;
-  margin-bottom: 3rem;
-}
-
-.food-description {
-  margin: auto 1.5rem;
-}
-
-.font-title {
-  font-size: 1.8rem;
-  font-weight: 400;
-  color: #444;
-}
-
-.food-description p {
-  font-size: 1.4rem;
+  margin-bottom: 40px;
+  text-transform: uppercase;
   color: #555;
-  font-weight: 500;
 }
 
-.food-description .food-price {
-  color: #117964;
-  font-weight: 700;
-}
+/**********   Product-Section CSS Code Ends  **********/
+
 
 /* ........./ Testimonial /.......... */
 
@@ -510,7 +813,7 @@ body {
     transition: transform 0.4s ease-in-out;
   }
 
-  .navbar .menu-items {
+  .navbar .nav-items {
     padding-top: 100px;
     background: #fff;
     height: 100vh;
@@ -524,7 +827,7 @@ body {
     box-shadow: 5px 0px 10px 0px #aaa;
   }
 
-  .navbar .menu-items li {
+  .navbar .nav-itemsli {
     margin-bottom: 1.5rem;
     font-size: 1.3rem;
     font-weight: 500;
@@ -537,34 +840,34 @@ body {
     font-size: 2rem;
   }
 
-  .navbar-container input[type="checkbox"]:checked ~ .menu-items {
+  .navbar-container input[type="checkbox"]:checked~.nav-items {
     transform: translateX(0);
   }
 
-  .navbar-container input[type="checkbox"]:checked ~ .hamburger-lines .line1 {
+  .navbar-container input[type="checkbox"]:checked~.hamburger-lines .line1 {
     transform: rotate(35deg);
   }
 
-  .navbar-container input[type="checkbox"]:checked ~ .hamburger-lines .line2 {
+  .navbar-container input[type="checkbox"]:checked~.hamburger-lines .line2 {
     transform: scaleY(0);
   }
 
-  .navbar-container input[type="checkbox"]:checked ~ .hamburger-lines .line3 {
+  .navbar-container input[type="checkbox"]:checked~.hamburger-lines .line3 {
     transform: rotate(-35deg);
   }
 
-  /* ......./ food /......... */
+  /* ......./ product /......... */
 
-  .food-container {
+  .product-section{
     flex-direction: column;
     align-items: stretch;
   }
 
-  .food-type:not(:last-child) {
+  .product-border:not(:last-child) {
     margin-bottom: 3rem;
   }
 
-  .food-type {
+  .product-border {
     box-shadow: 5px 5px 10px 0 #aaa;
   }
 
@@ -578,8 +881,8 @@ body {
     font-size: 65%;
   }
 
-  .navbar .menu-items li{
-      font-size: 1.6rem;
+  .navbar .nav-itemsli {
+    font-size: 1.6rem;
   }
 
   .testimonial-container {
@@ -587,11 +890,11 @@ body {
     text-align: center;
   }
 
-  .food-menu-container img {
+  .products-container img {
     margin: auto;
   }
 
-  .food-menu-item {
+  .products-item {
     flex-direction: column;
     text-align: center;
   }
@@ -610,6 +913,7 @@ body {
     margin: 3rem auto;
   }
 
+
   .logo {
     position: absolute;
     top: 06px;
@@ -617,12 +921,107 @@ body {
     font-size: 3rem;
   }
 
-  .navbar .menu-items li {
+  .navbar .nav-itemsli {
     margin-bottom: 2.5rem;
     font-size: 1.8rem;
     font-weight: 500;
   }
 }
+
+/**********  Product-Section CSS Code Starts  **********/
+.product-section {
+  padding-left: 15px;
+  padding-right: 15px;
+  margin-bottom: 20px;
+}
+
+.product-img {
+  width: auto;
+  height: 270px;
+}
+
+.product-img-center {
+  text-align: center;
+}
+
+.product-border {
+  border: 1px solid #d1d1d1;
+  padding: 20px;
+}
+
+.product-name a {
+  color: #232b33;
+  text-decoration: none;
+  font-size: 17px;
+  font-family: Roboto, sans-serif, arial;
+}
+
+.product-rating {
+  color: #FFC315;
+  font-size: 14px;
+  padding-top: 6px;
+}
+
+.product-rating span {
+  font-weight: 600;
+  color: #3c3b3b8c;
+  font-size: 12px;
+  font-family: Roboto, sans-serif, arial;
+}
+
+.product-discounted-price {
+  color: #333;
+  font-size: 18px;
+  letter-spacing: 0.1px;
+  font-weight: 600;
+  font-family: Roboto, sans-serif, arial;
+}
+
+.product-original-price {
+  color: #6f6f6f;
+  text-decoration: line-through;
+  font-size: 14px;
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+}
+
+.product-discount {
+  border: 1px solid #ccc;
+  background: #fff;
+  display: inline-block;
+  font-size: 10px;
+  color: #999;
+  padding: 5px;
+  border-radius: 1px;
+  float: right;
+}
+
+.product-price {
+  margin-top: 15px;
+}
+
+.size-radio-btn {
+  display: inline-block;
+  width: 40px;
+  height: 40px;
+  text-align: center;
+  font-size: 20px;
+  border: 1px solid #383838;
+  border-radius: 50%;
+  margin: 10px;
+  margin-left: 0;
+  line-height: 40px;
+  /* text-transform: uppercase; */
+  color: #383838;
+  cursor: pointer;
+}
+
+.size-radio-btn.check {
+  background: palevioletred;
+  color: #fff;
+}
+
+/**********   Product-Section CSS Code Ends  **********/
+
 
 @media (min-width: 769px) and (max-width: 1200px) {
   .img-container h3 {
